[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ardt_language_modeling"
version = "0.0.1"
description = "Experimentations with models based on decision trees, fit onto embeddings of windowed sentences labeled with elements in the vocabulary (so as to perform next-token prediction). The classifier is queried in an auto-regressive fashion for the purpose of generating sentences."
authors = [
  { name = "Gianmarco Turchiano" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["ardt_language_modeling"]
force_sort_within_sections = true
